<resources>

    <string name="app_name">pepitmobil</string>
    <string name="hello_world">Hello worlddqdqsdqsd!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">pepitmobilMainActivity</string>
    <string name="exercice_1">Exercice</string>
    <string name="exercice_2">Préférences</string>
    <string name="exercice_3">Quitter</string>
    <string name="vide">______</string>
    <string name="retour">Retour au menu</string>
    <string name="next">Serie suivante</string>
    <string name="recommencer">Recommencer l\'exercice</string>
    <string name="copyright">Conçue et réalisée l\'équipe PepitMobil/ c 2012–2013</string>
    <string name="title_activity_jeu_chiffres_vers_nombres">JeuChiffresVersNombres</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="option_difficulte">Difficulté</string>
    <string name="option_mode">Mode de jeu</string>
    <string name="option_mode_nombres_vers_texte">nombres vers texte</string>
    <string name="option_mode_texte_vers_nombres">texte vers nombres</string>

</resources>