<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<TextView
        android:id="@+id/text1"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/vide" 
        android:textSize="30dp"/>
	<TextView
        android:id="@+id/text2"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text1"
        android:text="@string/vide" 
        android:textSize="30dp"/>
	<TextView
        android:id="@+id/text3"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text2"
        android:text="@string/vide" 
        android:textSize="30dp"/>
	<TextView
        android:id="@+id/text4"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text3"
        android:text="@string/vide" 
        android:textSize="30dp"/>
	<TextView
        android:id="@+id/text5"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text4"
        android:text="@string/vide" 
        android:textSize="30dp"/>
    <Button
        android:id="@+id/q1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/text1"
        android:text="@string/vide" />

    <Button
        android:id="@+id/q2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/q1"
        android:layout_toRightOf="@+id/text2"
        android:text="@string/vide" />

    <Button
        android:id="@+id/q3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/q2"
        android:layout_toRightOf="@+id/text3"
        android:text="@string/vide" />

    <Button
        android:id="@+id/q4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/q3"
        android:layout_toRightOf="@+id/text4"
        android:text="@string/vide" />

    <Button
        android:id="@+id/q5"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/q4"
        android:layout_toRightOf="@+id/text5"
        android:text="@string/vide" />
     
    <Button
        android:id="@+id/r1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/q1"
        android:text="@string/vide" 
        android:visibility="invisible"/>

    <Button
        android:id="@+id/r2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/q2"
        android:layout_below="@+id/r1"
        android:text="@string/vide"
        android:visibility="invisible" />

    <Button
        android:id="@+id/r3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/q3"
        android:layout_below="@+id/r2"
        android:text="@string/vide" 
        android:visibility="invisible"/>

    <Button
        android:id="@+id/r4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/q4"
        android:layout_below="@+id/r3"
        android:text="@string/vide"
        android:visibility="invisible" />

    <Button
        android:id="@+id/r5"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/q5"
        android:layout_below="@+id/r4"
        android:text="@string/vide"
        android:visibility="invisible" />
	<Button
        android:id="@+id/next"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/r5"
        android:text="@string/next" />
	<Button
        android:id="@+id/recommencer"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/r5"
        android:text="@string/recommencer" />
	<TextView
        android:id="@+id/scoreFinal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/r5"
        android:layout_toRightOf="@+id/next"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/retourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/retour" />

    <ImageView
        android:id="@+id/gg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/r3"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@+id/retourButton"
        android:src="@drawable/troll"
        android:visibility="invisible" />

</RelativeLayout>
